--- a/pages/bahia.html
+++ b/pages/bahia.html
@@ -178,9 +178,8 @@ return <footer className="footer">
               <div className="footer-section">
                 <h3>Contato</h3>
                 <address>
-                  <p>Email: contato@ags.com.br</p>
-                  <p>Telefone: (11) 1234-5678</p>
-                  <p>Endereço: Av. Principal, 1000</p>
+                  <p>Email: contato@agstelecom.com.br</p>
+                  <p>Telefone: 0800 444 4441</p>
                 </address>
               </div>
               <div className="footer-section">
