--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
                 </address>
               </div>
               <div className="footer-section">
+                <div className="footer-site">
+                  <h3>Visite nosso site</h3>
+                <a href="https://www.agstelecom.com.br" target="_blank">www.agstelecom.com.br</a>
+              </div>
                 <h3>Redes Sociais</h3>
                 <div className="social-links">
                   <a href="https://facebook.com/ags" aria-label="Facebook">
