--- a/pages/bahia.html
+++ b/pages/bahia.html
@@ -183,6 +183,10 @@ return <footer className="footer">
                 </address>
               </div>
               <div className="footer-section">
+                <div className="footer-site">
+                  <h3>Visite nosso site</h3>
+                <a href="https://www.agstelecom.com.br" target="_blank">www.agstelecom.com.br</a>
+              </div>
                 <h3>Redes Sociais</h3>
                 <div className="social-links">
                   <a href="https://facebook.com/ags" aria-label="Facebook">
@@ -200,7 +204,7 @@ return <footer className="footer">
             <div className="footer-bottom">
               <p>&copy; {new Date().getFullYear()} AGS. Todos os direitos reservados.</p>
             </div>
-          </footer>;
+          </footer>
 };
 ReactDOM.createRoot(document.getElementById('root')).render(<App />);</script>
   </body>
