--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <div>
           <nav className="navbar">
             <div className="nav-content">
-              <div className="nav-brand">
-                <span>Consulta de Viabilidade AGS</span>
+              
+                <div className="nav-brand">
+                  <span>AGS TELECOM</span>
               </div>
               <div 
                 className={`hamburger ${menuOpen ? 'active' : ''}`} 
@@ -82,8 +83,11 @@
                 <address>
                   <p>Email: contato@agstelecom.com.br</p>
                   <p>Telefone: 0800 444 4441</p>
-                </address>
-              </div>
+                  </address>
+                  </div>
+                  <div className="footer-section">
+                    <img class="logo-footer" src="./assets/logofooter.svg" alt="Logo AGS branco" srcset=""></img>
+                  </div>
               <div className="footer-section">
                 <div className="footer-site">
                   <h3>Visite nosso site</h3>
