--- a/pages/rio.html
+++ b/pages/rio.html
@@ -4,7 +4,8 @@
   <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Busca de Endereços</title>
+  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <title>AGS TELECOM - Consulta de Viabilidade</title>
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
