--- a/pages/ceara.html
+++ b/pages/ceara.html
@@ -31,7 +31,7 @@
   setHasSearched(true);
 
   try {
-    const response = await fetch('DB/dataCE.json');
+    const response = await fetch('DB/dataCE2.json');
 
     if (!response.ok) {
       throw new Error('Error loading data');
