--- a/pages/manaus.html
+++ b/pages/manaus.html
@@ -174,7 +174,7 @@ formattedValue = formattedValue.replace(/[çÇáéíóúàèìòùãõâêîôû
             <h1 >CONSULTA DE VIABILIDADE</h1>
             </div>
             <h1 class="stateh1">AMAZONAS</h1>
-            <p className="searchp">Data Referência: Abril/2025</p>
+            <p className="searchp">Data Referência: MAIO/2025</p>
           <form onSubmit={handleSubmit}>
             <input type="text" id="cep" placeholder="CEP" maxLength="9" value={formData.cep} onChange={handleChange} />
             <input type="text" id="numero" placeholder="Número" value={formData.numero} onChange={handleChange} />
